sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:4: error: value -/ is not a member of Int
  for (a <- 0 to (getValueCount()-/2 )){
                                 ^